modified for practice

--- a/run.html
+++ b/run.html
@@ -8,7 +8,7 @@
 
 
 <script>
-    var ref      = new Firebase('<FIREBASE_ROOT_URL>').push();
+    var ref      = new Firebase('<FIREBASE_ROOT_URL>').push();//Modified
     var headless = new Firepad.Headless(ref);
 
     var hash = window.location.hash.replace(/#/g, '');
